--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="http://fonts.cdnfonts.com/css/ninja-naruto" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--animação de scroll-->
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"  > animação de scroll -->
     <link rel="shortcut icon" type="imagex/png" href="imgs/naruto">
     <title>Consumindo API de Naruto</title>
 </head>
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="d-flex justify-content-center align-items-center">
             <div class="card p-4 m-3 cardFiltro">
-                <h5 class="card-text">Filtrar por:</h5>
+                <h5 class="card-text">Aplicar Filtro</h5>
             <select class="form-select form-select-sm opcoes-select">
                 <option selected>Selecione</option>
                 <option value="TODOS">Todos</option>
@@ -47,9 +47,13 @@
             </div>
 
 
-            <div class="div-nome mt-2">
+            <div class="div-nome mt-2 d-none">
                 <input type="text" class="form-control-sm buscaNome" placeholder="Digite um nome...">
             </div>
+
+                <div class="listarTodos">
+                </div>
+
             </div>
         </div>
     </div>
@@ -75,7 +79,7 @@
 
 </body>
 
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> <!--animação de scroll-->
+<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> animação de scroll -->
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymou"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
